# everpuzzle

./: .travis.yml  Cargo.toml  README.md
src/: data.rs  main.rs
src/basics/: RNG.rs  block.rs  cursor.rs  finite_state_machine.rs  fsm.rs  kind_generator.rs  mod.rs  playfield.rs  rng_resource.rs  spritesheet_loader.rs  stack.rs
src/block_states/: block_state.rs  clear.rs  fall.rs  hang.rs  idle.rs  land.rs  mod.rs  swap.rs
src/components/: block.rs  cursor.rs  kind_generator.rs  mod.rs  spritesheet_loader.rs
src/components/playfield/: mod.rs  playfield_clear.rs  playfield_push.rs  stack.rs
src/configs/: display_config.ron
src/game_modes/: +  game_mode.rs  mod.rs
src/resources/: display_config.ron  input.ron  input_controller.ron
src/sprites/: cursor_spritesheet.ron
src/states/: fall.rs  idle.rs  mod.rs  state.rs
src/systems/: block_sprite_sheet.ron  block_system.rs  cursor_system.rs  fps_system.rs  fsm_system.rs  mod.rs  playfield_system.rs
src/systems/playfield/: clear_system.rs  mod.rs  push_system.rs
